<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Taïste</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="feed">Feed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Orders</string>
    <string name="me">Me</string>
    <string name="welcome_to_the_guts_community">Discover the best and brightest chefs, around the world.</string>
    <string name="user">User</string>
    <string name="chef">Chef</string>
    <string name="bloom_chef">Bloom Chef</string>
    <string name="bloom">Bloom</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="meal_kit">Meal Kit</string>
    <string name="personal_chef">Personal Chef</string>
    <string name="catering">Catering</string>
    <string name="filter">Filter</string>
    <string name="checkout">Checkout</string>
    <string name="item_title">This is a sample cater item.</string>
    <string name="click_here_for_more_detail">Click here for more detail</string>
    <string name="item_image">Item Image</string>
    <string name="this_is_an_item_description">This is an item description</string>
    <string name="item_likes">Item Likes</string>
    <string name="item_orders">Item Orders</string>
    <string name="item_rating">Item Rating</string>
    <string name="item_price">Item Price</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="item_detail">Item Detail</string>
    <string name="reviews">Reviews</string>
    <string name="expectation_s_met">Expectation\'s Met</string>
    <string name="quality">Quality</string>
    <string name="chef_rating">Chef Rating</string>
    <string name="total">Total</string>
    <string name="taxes_and_fees">Taxes And Fees</string>
    <string name="food_total">Food Total</string>
    <string name="_0_00">$0.00</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="order_details">Order Details</string>
    <string name="quantity_of_event">Quantity Of Event</string>
    <string name="type_of_event">Type Of Event</string>
    <string name="select_the_dates_of_your_event_here">Select the dates of your event here.</string>
    <string name="dates_of_event">Dates of Event</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="clear">Clear</string>
    <string name="see_all_dates">See All Dates</string>
    <string name="location">Location</string>
    <string name="enter_the_location_of_your_event_here">Enter the location of your event here.</string>
    <string name="street_address">Street Address</string>
    <string name="suite_apt">Suite / Apt #</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="notes_to_chef">Notes To Chef</string>
    <string name="notes_to_chef_here">Notes to Chef here.</string>
    <string name="add">Add</string>
    <string name="add_dates_of_event">Add Dates of Event</string>
    <string name="add_location">Add Location</string>
    <string name="click_here_to_view_detail">Click here to view detail.</string>
    <string name="content">Content</string>
    <string name="likes">Likes</string>
    <string name="chefs">Chefs</string>
    <string name="settings">Settings</string>
    <string name="expectations_met">Expectations Met</string>
    <string name="messages">Messages</string>
    <string name="accept">Accept</string>
    <string name="show_notes">Show Notes</string>
    <string name="show_dates">Show Dates</string>
    <string name="messages_for_travel_fee">Messages for Travel Fee</string>
    <string name="total_cost">Total Cost</string>
    <string name="take_home">Take Home</string>
    <string name="pending">Pending</string>
    <string name="scheduled">Scheduled</string>
    <string name="complete">Complete</string>
    <string name="pending_chef_acceptance">* pending chef acceptance. *</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string-array name="type_of_service">
        <item>Cater Items</item>
        <item>Personal Chef Items</item>
        <item>MealKit Items</item>
    </string-array>
    <string name="menu_item">Menu Item</string>
    <string name="are_you_a_chef_sign_up_here">Are You a Chef? Sign Up Here</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit_item">edit item</string>
    <string name="this_is_an_item_title">This is an item title</string>
    <string name="enter_message_here">Enter message here...</string>
    <string name="send_message">send message</string>
    <string name="travel_fee">Travel Fee</string>
    <string name="x">X</string>
    <string name="comments">Comments</string>
    <string name="view_replies">view_replies</string>
    <string name="hide">Hide</string>
    <string name="video_views">video_views</string>
    <string name="banking">Banking</string>
    <string name="add_item">add item</string>
    <string name="item_title_1">Item Title</string>
    <string name="item_description_2">Item Description</string>
    <string name="burger">Burger</string>
    <string name="creative">Creative</string>
    <string name="healthy">Healthy</string>
    <string name="low_calorie">Low Calorie</string>
    <string name="low_carbs">Low Carbs</string>
    <string name="vegan">Vegan</string>
    <string name="pasta">Pasta</string>
    <string name="seafood">Seafood</string>
    <string name="workout">Workout</string>
    <string name="item_calories">Item Calories</string>
    <string name="add_image">add_image</string>
    <string name="delete">Delete</string>
    <string name="record">Record</string>
    <string name="upload">Upload</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="verify_email">Verify Email</string>
    <string name="please_check_your_email_to_verify_your_email_address">Please check your email to verify your email address.</string>
    <string name="send_again">Send Again</string>
    <string name="continue_1"><![CDATA[Continue ->]]></string>
    <string name="taiste">Taïste</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_intro">This Privacy Policy (\'Policy\') describes how Taïste, Inc (\'Provider\', \'we\', \'us\', or \'our\') collects, uses, and discloses personal information when you access or use our transaction-based culinary software-as-a-service mobile application (\'Taïste\'). By using Taïste, you agree to the terms and practices described in this Policy.</string>
    <string name="information_we_collect">Information We Collect</string>
    <string name="information_a">a. Personal Information: When you create an account or use Taïste, we may collect personal information such as your name, email address, phone number, and payment details.</string>
    <string name="information_B">b. Transaction Information: We collect information about your culinary transactions, including order details, delivery address, and payment history.</string>
    <string name="information_c">c. Usage and Device Information: We may collect information about your interactions with the App, such as your IP address, device information, operating system, and app usage data.</string>
    <string name="information_d">d. Location Information: With your consent, we may collect and process your precise location information to provide location-based services.</string>
    <string name="use_of_information">Use of Information</string>
    <string name="use_a">a. We use the collected information to provide, maintain, and improve Taïste\'s functionality and services, including order processing, delivery, and customer support.</string>
    <string name="user_b">b. We may use your email address or phone number to send transaction-related notifications, updates, and promotional communications, subject to your preferences and applicable laws.</string>
    <string name="use_c">c. We may aggregate and anonymize data for statistical and analytical purposes to enhance our services and better understand user preferences and trends.</string>
    <string name="sharing_of_information">Sharing of Information</string>
    <string name="sharing_a">a. We may share your personal information with culinary service providers to fulfill your orders and facilitate transactions.</string>
    <string name="sharing_b">b. We may share your information with trusted third-party service providers who assist us in operating Taïste, such as payment processors, delivery partners, and customer support providers.</string>
    <string name="sharing_c">c. We may disclose your information if required by law, regulation, or legal process, or if we believe in good faith that such disclosure is necessary to protect our rights, the safety of others, or investigate fraud or security issues.</string>
    <string name="sharing_d">d. In the event of a merger, acquisition, or sale of all or a portion of our assets, your information may be transferred or disclosed as part of the transaction, subject to privacy laws and contractual obligations.</string>
    <string name="data_retention">Data Retention</string>
    <string name="data_a">a. We retain personal information for as long as necessary to fulfill the purposes outlined in this Policy, unless a longer retention period is required or permitted by law.</string>
    <string name="data_b">b. We may retain and use aggregated or anonymized data indefinitely for analytical purposes.</string>
    <string name="security">Security</string>
    <string name="security_a">a. We implement reasonable security measures to protect personal information from unauthorized access, disclosure, or alteration.</string>
    <string name="security_b">b. However, no method of transmission or electronic storage is completely secure. Therefore, we cannot guarantee the absolute security of your information.</string>
    <string name="children_s_privacy">Children\'s Privacy</string>
    <string name="children_a">Taïste is not intended for individuals under the age of 13. We do not knowingly collect personal information from children. If we become aware that we have inadvertently collected personal information from a child, we will take steps to delete such information.</string>
    <string name="your_rights_and_choices">Your Rights and Choices</string>
    <string name="rights_a">a. You may access, update, correct, or delete your personal information through Taïste\'s settings or by contacting us directly.</string>
    <string name="rights_b">b. You may unsubscribe from marketing communications by following the instructions in the communication or adjusting your notification preferences.</string>
    <string name="rights_c">c. Depending on your jurisdiction, you may have additional rights regarding your personal information, such as the right to object to processing or the right to data portability. Please contact us for further information.</string>
    <string name="third_party_links_and_services">Third-Party Links and Services</string>
    <string name="third_a">Taïste may contain links to third-party websites or services that are not controlled or operated by us. This Policy does not apply to such third-party services, and we are not responsible for their privacy practices</string>
    <string name="please_read_our">Please read our</string>
    <string name="terms_of_service_2">Terms of Service</string>
    <string name="and_our">and our</string>
    <string name="privacy_policy_2">Privacy Policy</string>
    <string name="before_continuing">before continuing.</string>
</resources>