<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".both.PrivacyPolicyActivity">

    <RelativeLayout
        android:id="@+id/initial_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/privacy_policy"
            android:textColor="@color/main"
            android:textSize="17sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_account_button"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/red700"
            android:textSize="12sp"
            android:visibility="invisible"
            app:cornerRadius="1dp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/individual_layout"
        android:layout_width="match_parent"
        android:layout_below="@id/initial_layout"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_intro"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_we_collect"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="12dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_a"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_B"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_c"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_d"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_of_information"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="12dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_a"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_b"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_c"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sharing_of_information"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="12dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sharing_a"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sharing_b"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sharing_c"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sharing_d"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_retention"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="12dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_a"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_b"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/security"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="12dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/security_a"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/security_b"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/children_s_privacy"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="12dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/children_a"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_rights_and_choices"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="12dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rights_a"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rights_b"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rights_c"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_party_links_and_services"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="12dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_a"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>