<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".both.VerifyEmail">

    <RelativeLayout
        android:id="@+id/initial_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/verify_email"
            android:textColor="@color/main"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/initial_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_check_your_email_to_verify_your_email_address"
            android:textSize="15sp"
            android:textColor="@color/main"
            android:textStyle="normal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_verification_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_again"
                android:textColor="@color/gray600"
                android:backgroundTint="@color/white"
                android:textAllCaps="false"
                app:cornerRadius="1dp"
                android:textSize="13sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_1"
            android:textColor="@color/main"
            android:layout_marginStart="25dp"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            app:cornerRadius="1dp"
            android:textSize="13sp"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>